--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,16 @@
 @import "tailwindcss";
 
+*{
+  margin: 0px;
 
+  box-sizing: border-box;
+}
 
 body {
   font-family: "Roboto", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
-  
+  background: #e4f2f2;
 }
 .container{
     width: 90%;
@@ -20,6 +24,6 @@ header .top-strip{
 }
 
 
-.link{
-
+.link:hover {
+ color: brown;
 }
