--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,17 @@
 
   box-sizing: border-box;
 }
-
+::-webkit-scrollbar{
+  width: 8px !important;
+  height: 8px !important;
+}
+::-webkit-scrollbar-thumb{
+  background: #febd69;
+  border-radius: 5px;
+}
+::-webkit-scrollbar-track{
+  background: #ccc;
+}
 body {
   font-family: "Roboto", sans-serif;
   font-optical-sizing: auto;
