--- a/src/components/Products/style.css
+++ b/src/components/Products/style.css
@@ -2,6 +2,6 @@
 line-height: 21px !important;
 } 
 
-.productItem .actions{
-    
+.productItem .actions button svg{
+    pointer-events: none !important;
 }
