--- a/src/index.css
+++ b/src/index.css
@@ -88,3 +88,9 @@ header .top-strip{
   color: rgb(0, 0, 0) !important; /* Change color on hover */
   /* background: red; */
 /* }  */
+
+
+.MuiSvgIcon-fontSizeMedium{
+  color:#febd69;
+
+} 
