--- a/src/components/SideBar/index.css
+++ b/src/components/SideBar/index.css
@@ -28,8 +28,16 @@
     height: 13px !important;
 background-color: #febd69 !important;
 
+
 }
 .range-slider__range{
 background-color: #febd69 !important;
 
+}
+
+.col2 .MuiButtonBase-root {
+    color: black !important;
+    font-size: 14px !important;
+    font-weight: 500 !important;
+    margin-right: 13px !important;
 }
