--- a/src/components/SideBar/index.css
+++ b/src/components/SideBar/index.css
@@ -2,8 +2,12 @@
     max-height: 180px;
     overflow: scroll;
     overflow-x: hidden;
-}
+} 
 
+.btn-org:hover{
+    background: #c5b8a8 !important ;
+
+}
 
 .sidebar .scroll::-webkit-scrollbar{
    width: 5px !important;
@@ -35,9 +39,27 @@ background-color: #febd69 !important;
 
 }
 
-.col2 .MuiButtonBase-root {
+/* .col23  {
     color: black !important;
     font-size: 14px !important;
     font-weight: 500 !important;
     margin-right: 13px !important;
+} */
+
+.col23 .MuiButton-text{
+color: black !important;
+    font-size: 14px !important;
+    font-weight: 500 !important;
+    margin-right: 13px !important;
+}
+
+
+.itemViewAction button.active svg{
+    color: #febd69 !important;
+    opacity: 1 !important;
+}
+
+.Mui-selected.MuiPaginationItem-page{
+    background: #febd69 !important;
+    color: black !important;
 }
