--- a/src/components/SideBar/index.css
+++ b/src/components/SideBar/index.css
@@ -3,27 +3,20 @@
     overflow: scroll;
     overflow-x: hidden;
 } 
-
 .btn-org:hover{
     background: #c5b8a8 !important ;
-
 }
-
 .sidebar .scroll::-webkit-scrollbar{
    width: 5px !important;
    height: 5px !important;
 
 }
-
 .sidebar .scroll::-webkit-scrollbar-thumb{
     background: #febd69 !important ;
 }
-
-
 .ReactCollapse--collapse {
   transition: height 400ms;
 }
-
 .range-slider{
     height: 5px !important;
 }
@@ -62,4 +55,8 @@ color: black !important;
 .Mui-selected.MuiPaginationItem-page{
     background: #febd69 !important;
     color: black !important;
+}
+
+.zoomProductSliderThumb .swiper-slide{
+    height: auto !important;
 }
