--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,8 @@ body {
   font-optical-sizing: auto;
   font-style: normal;
   overflow-x:hidden ;
-    background-color: #f3f4f6;
+  background-color: #f3f4f6;
+  color: rgba(36,36, 36, 0.9);
   
 }
 .container{
@@ -94,6 +95,11 @@ header .top-strip{
   color:#febd69;
 
 } 
+
+p{
+  font-size: 14px;
+  line-height: 25px;
+}
 
 .zoomProductSliderThumb .swiper-button-next{
     bottom: 0px !important;
