--- a/src/index.css
+++ b/src/index.css
@@ -167,5 +167,7 @@ p{
 
 input[type=number]::-webkit-inner-spin-button, 
 input[type=number]::-webkit-outer-spin-button { 
-   font-size: 10px !important;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
 }
