--- a/src/index.css
+++ b/src/index.css
@@ -99,6 +99,11 @@ header .top-strip{
 p{
   font-size: 14px;
   line-height: 25px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+h1,h2,h3,h4,h5,h6{
+  font-weight: 600;
 }
 
 .zoomProductSliderThumb .swiper-button-next{
