--- a/src/index.css
+++ b/src/index.css
@@ -176,3 +176,11 @@ input[type=number]::-webkit-outer-spin-button {
     -moz-appearance: none;
     appearance: none;
 }
+.reviewScroll::-webkit-scrollbar{
+  width: 5px !important;
+}
+
+.reviewScroll::-webkit-scrollbar-thumb{
+  background: #e6b678 !important;
+
+}
