--- a/src/index.css
+++ b/src/index.css
@@ -192,3 +192,8 @@ input[type=number]::-webkit-outer-spin-button {
 .productDetailsModel .MuiDialogContent-root {
   padding: 0px !important;
 }
+
+
+.MuiPaper-root{
+  overflow: hidden !important;
+}
