--- a/src/index.css
+++ b/src/index.css
@@ -197,3 +197,7 @@ input[type=number]::-webkit-outer-spin-button {
 .MuiPaper-root{
   overflow: hidden !important;
 }
+
+#size-menu .MuiButtonBase-root {
+  font-size: 10px !important;
+}
